fixing thumbnail spacing problems

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -58,6 +58,10 @@ div.user-posts-index {
   clear: both;
 };
 
+.thumbnail-container {
+  margin-bottom: 30px;
+};
+
 div.footer {
   display: block;
   clear: both;
